# StreamBase

./: .gitignore  README.md
src/: CMakeLists.txt
src/apps/StreamClient/: CMakeLists.txt  StreamClient.cpp  StreamClient.vcxproj  StreamClient.vcxproj.filters
src/apps/StreamServer/: CMakeLists.txt  StreamServer.cpp  StreamServer.vcxproj  StreamServer.vcxproj.filters
src/libs/libStreamBase/: CMakeLists.txt  Event.cpp  Event.h  EventManager.cpp  EventManager.h  Msg.h  StreamBase.cpp  StreamBase.h  StreamBase.vcxproj  StreamBase.vcxproj.filters  User.cpp  User.h
